Add admin signup option via checkbox and update DB on registration

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,6 +19,8 @@
         <input type="password" name="password" id="password" required />
         <label for="confirmPassword">Confirm Password:</label>
         <input type="password" name="confirmPassword" id="confirmPassword" required />
+        <label for="isadmin">Be an admin:</label>
+        <input type="checkbox" name="isadmin" id="isadmin" value="yes" />
         <button type="submit">Register</button>
     </form>
 </body>
