--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title><%= title %></title>
 </head>
 <body>
@@ -16,10 +20,19 @@
         <a href="/membership">Become our member</a>
         <a href="/logout">LOG OUT</a>
       <% } else { %>
-        <h1>Home Page Buddy!</h1>
-        <a href="/signup">Register</a>
-        <a href="/login">Login</a>
-        <%- include("messages", { messages: messages, user: user }) %>
+        <div class="homeCnt">
+            <div class="miniHomeCnt">
+            <div class="tinyHomeCnt">
+            <p><strong>Secret - <span>Social</span></strong></p>
+            <div class="homelogos">
+                <a href="/signup">Register</a>
+                <a href="/login">Login</a>
+            </div>
+            <hr style="width: 50%; border: 1px solid white;">
+            </div>
+           <%- include("messages", { messages: messages, user: user }) %>
+            </div>
+        </div>
     <%}%>
 </body>
 </html>
