--- a/views/partials/errors.ejs
+++ b/views/partials/errors.ejs
@@ -1,7 +1,7 @@
-<% if (locals.errors) {%>
-    <ul>
-      <% errors.forEach(function(error) { %>
-        <li><%= error.msg %></li>
-      <% }); %>
-    </ul>
-  <% } %>
+<% if (errors && errors.length > 0) { %>
+  <ul style="color: red;">
+    <% errors.forEach(function(error) { %>
+      <li><%= error.msg %></li>
+    <% }); %>
+  </ul>
+<% } %>
