--- a/views/partials/errors.ejs
+++ b/views/partials/errors.ejs
@@ -1,7 +1,9 @@
 <% if (errors && errors.length > 0) { %>
-  <ul style="color: red;">
+  <div class="error">
+  <ul style="color: grey;">
     <% errors.forEach(function(error) { %>
       <li><%= error.msg %></li>
     <% }); %>
   </ul>
+  </div>
 <% } %>
