--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,25 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title><%= title %></title>
 </head>
 <body>
-    <h1>Sign-Up!</h1>
-    <%- include("partials/errors.ejs") %>
+    <div class="signup">
+    <div class="miniSignup">
+    <h2>Sign Up!</h2>
     <form action="/signup" method="post">
+        <div class="formCnt">
         <label for="firstname">First Name:</label>
         <input type="text" name="firstname" id="firstname" required />
+        </div>
+
+        <div class="formCnt">
         <label for="lastname">Last Name:</label>
         <input type="text" name="lastname" id="lastname" required />
+        </div>
+
+        <div class="formCnt">
         <label for="username">Username:</label>
         <input type="email" name="username" id="username" placeholder="Enter your email" required />
+        </div>
+
+        <div class="formCnt">
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required />
+        </div>
+
+        <div class="formCnt">
         <label for="confirmPassword">Confirm Password:</label>
         <input type="password" name="confirmPassword" id="confirmPassword" required />
+        </div>
+
+        <div class="formCnt2">
         <label for="isadmin">Be an admin:</label>
         <input type="checkbox" name="isadmin" id="isadmin" value="yes" />
+        </div>
+
         <button type="submit">Register</button>
     </form>
+    <%- include("partials/errors.ejs") %>
+    </div>
+    </div>
 </body>
 </html>
