--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,16 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title><%= title %></title>
 </head>
 <body>
-    <h1>Login</h1>
+    <div class="login">
+    <div class="miniLogin">
+    <h1>Sign In!</h1>
     <form action="/login" method="post">
+        <div class="tinyLogin">
         <label for="username">Username:</label>
         <input type="email" name="username" id="username" required/>
+        </div>
+
+        <div class="tinyLogin">
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required/>
-        <button type="submit">Submit</button>
+        </div>
+        <button type="submit">Login</button>
     </form>
+    </div>
+    </div>
 </body>
 </html>
