--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@ body,html{
 }
 
 /* Home Page & Sign Up & Login */
-.homeCnt, .signup, .login{
+.homeCnt, .signup, .login, .newUser{
     min-height: 100vh;
     width: 100vw;
     display: flex;
@@ -21,7 +21,7 @@ body,html{
     color: oklch(98.6% 0.031 120.757);
     font-family: 'Poppins', sans-serif;
 }
-.miniHomeCnt, .miniSignup, .miniLogin{
+.miniHomeCnt, .miniSignup, .miniLogin, .miniNewUser{
     min-height: 90vh;
     width: 100%;
     display: flex;
@@ -97,7 +97,7 @@ body,html{
     color: gray;
 }
 
-.miniSignup > h2, .miniLogin > h1{
+.miniSignup > h2, .miniLogin > h1, .miniNewUser > h1{
     font-family: inherit;
     font-size: 3vw;
 }
@@ -159,4 +159,32 @@ body,html{
     font-size: 1.1vw;
     color: black;
     font-family: inherit;
+}
+.miniNewUser{
+    justify-content: space-around;
+}
+.miniNewUser > p{
+    font-family: inherit;
+    font-size: 1.7vw;
+}
+.miniNewUser > p > a{
+    font-family: inherit;
+    color: gray;
+    text-decoration: none;
+}
+.miniNewUser > p > a:hover{
+    text-decoration: underline;
+}
+.miniNewUser > a{
+    font-family: inherit;
+    font-size: 0.9vw;
+    text-decoration: none;
+    color: gray;
+    border: 2px solid gray;
+    padding: 5px;
+    border-radius: 10px;
+}
+.miniNewUser > a:hover{
+    color: white;
+    border: 2px solid white;
 }
