--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title><%= title %></title>
 </head>
 <body>
+    <div class="secretCnt">
+    <div class="miniSecretCnt">
     <form action="/membership/secret" method="post">
+        <div class="tinySecretCnt">
         <label for="secretpasscode">Secret Passcode:</label>
         <input type="text" name="secretpasscode" id="secretpasscode" placeholder="Remember your last name?" required>
-        <button type="submit">Submit</button>
+        </div>
+        <button type="submit">Verify</button>
     </form>
     <% if (query.error) { %>
         <p style="color: red;">Incorrect passcode.Try again!</p>
       <% } %>
+    </div>
+    </div>
 </body>
 </html>
