--- a/views/createmsg.ejs
+++ b/views/createmsg.ejs
@@ -3,16 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title><%= title %></title>
 </head>
 <body>
+    <div class="newMsg">
+    <div class="miniNewMsg">
+    <h1>Craft your announcement!</h1>
     <form action="/create/message" method="post">
+        <div class="tinyNewMsg">
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" required />
+        </div>
 
+        <div class="tinyNewMsg">
         <label for="text">Text:</label>
         <textarea name="text" id="text" required></textarea>
+        </div>
+
         <button type="submit">Submit</button>
     </form>
+    </div>
+    </div>
 </body>
 </html>
