updated message route to show all messages by rendering new ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <div class="tinyNewMember">
         <h2>You had unlocked your mistic powers:</h2>
         <p>- Announce your arrival with a bold <a href="/create"><em>message</em></a> !</p>
-        <p>- <a href="/messages"><em>Uncover</em></a> the hidden tomes — know the authors, time spells, and perhaps... erase, if fate allows</p>
+        <p>- <a href="/allmessages"><em>Uncover</em></a> the hidden tomes — know the authors, time spells, and perhaps... erase, if fate allows</p>
         </div>
         <a href="/logout">⬅ Log Out</a>
         </div>
