add final else condition for handling edge cases

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -29,7 +29,9 @@
               </div>
            <% } %>
           <% }) %>
-      <% } %>
+          <% } else { %>
+            <p style="font-size: 1.1vw; font-family: 'Poppins', sans-serif;">No messages to show!</p>
+          <% } %>          
   </div>
 </body>
 </html>
