--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@ body,html{
 }
 
 /* Home Page & Sign Up & Login */
-.homeCnt, .signup, .login, .newUser, .secretCnt, .newMember, .newMsg{
+.homeCnt, .signup, .login, .newUser, .secretCnt, .newMember, .newMsg, .allMsg{
     min-height: 100vh;
     width: 100vw;
     display: flex;
@@ -21,7 +21,7 @@ body,html{
     color: oklch(98.6% 0.031 120.757);
     font-family: 'Poppins', sans-serif;
 }
-.miniHomeCnt, .miniSignup, .miniLogin, .miniNewUser, .miniSecretCnt, .miniNewMember, .miniNewMsg{
+.miniHomeCnt, .miniSignup, .miniLogin, .miniNewUser, .miniSecretCnt, .miniNewMember, .miniNewMsg, .miniAllMsg{
     min-height: 90vh;
     width: 100%;
     display: flex;
@@ -29,6 +29,9 @@ body,html{
     justify-content: center;
     align-items: center;
     gap: 5vh;
+}
+.miniAllMsg{
+    padding: 6vh;
 }
 .tinyHomeCnt{
     min-height: 47vh;
@@ -100,6 +103,10 @@ body,html{
 .miniSignup > h2, .miniLogin > h1, .miniNewUser > h1, .miniNewMember > h1, .miniNewMsg > h1{
     font-family: inherit;
     font-size: 3vw;
+}
+.miniAllMsg > h2{
+    font-family: inherit;
+    font-size: 2vw;
 }
 .miniSignup form, .miniLogin form, .miniSecretCnt form, .miniNewMsg form {
     height: 60vh;
@@ -175,7 +182,7 @@ body,html{
 .miniNewUser > p > a:hover, .tinyNewMember > p > a:hover{
     text-decoration: underline;
 }
-.miniNewUser > a, .miniNewMember > a{
+.miniNewUser > a, .miniNewMember > a, .miniAllMsg > a{
     font-family: inherit;
     font-size: 0.9vw;
     text-decoration: none;
@@ -184,7 +191,7 @@ body,html{
     padding: 5px;
     border-radius: 10px;
 }
-.miniNewUser > a:hover, .miniNewMember > a:hover{
+.miniNewUser > a:hover, .miniNewMember > a:hover, .miniAllMsg > a:hover{
     color: white;
     border: 2px solid white;
 }
@@ -208,4 +215,46 @@ body,html{
 
 .tinyNewMsg textarea{
     height: 9vh;
+}
+
+.tinyAllMsg{
+    min-height: 13vh;
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2vh;
+    gap: 1vh;
+    border: 2px solid gray;
+    border-radius: 10px;
+}
+.superTinyAllMsg{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 7%;
+    overflow-wrap: break-word;
+}
+.superTinyAllMsg h3, .superTinyAllMsg h4{
+    width: 60%;
+    text-align: left;
+}
+.superTinyAllMsg p{
+    width: 33%;
+    text-align: right;
+    color: gray;
+    font-size: 1vw;
+}
+.superTinyAllMsg h3{
+    font-size: 1.3vw;
+}
+.superTinyAllMsg h4{
+    font-size: 1vw;
+    font-weight: 400;
+}
+.tinyAllMsg a {
+    color: gray;
+    text-decoration: overline;
 }
