--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
         <div class="miniNewMember">
         <h1>Congrats, you are a secret member now! 🎉</h1>
         <div class="tinyNewMember">
-        <h2>You had unlocked your mistic powers:</h2>
-        <p>- Announce your arrival with a bold <a href="/create"><em>message</em></a> !</p>
-        <p>- <a href="/allmessages"><em>Uncover</em></a> the hidden tomes — know the authors, time spells, and perhaps... erase, if fate allows</p>
+        <h2>You had unlocked your mistic powers :</h2>
+        <p>‣ Announce your arrival with a bold <a href="/create"><em>message</em></a> !</p>
+        <p>‣ <a href="/allmessages"><em>Uncover</em></a> the hidden tomes — know the authors, time spells, and perhaps... erase, if fate allows</p>
         </div>
         <a href="/logout">⬅ Log Out</a>
         </div>
@@ -25,7 +25,7 @@
     <% } else if (locals.user) {%>
         <div class="newUser">
         <div class="miniNewUser">
-        <h1>Hey <%= user.firstname %>! What's up?</h1>
+        <h1>👋 Hey <%= user.firstname %>! What's up?</h1>
         <p>Membership to our private circle awaits - <a href="/membership"><em>enter with the code</em></a> to proceed!</p>
         <a href="/logout">⬅ Log Out</a>
         </div>
